[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Ishraq Ahmed <ishbros27@gmail.com>"]
description = ""
name = "pcti-lockdown"
version = "0.1.0"
[tool.poetry.dependencies]
colored = "^1.4"
python = "^3.8"
[tool.poetry.dev-dependencies]
